--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,8 @@
 # Add the file and folders to .gitignore
-zz_archive/mbay-tax-sheet-for-kryptos-7fc01e35fb9a.json
+.env
+.env.*
+!.env.template
+/zz_archive/mbay-tax-sheet-for-kryptos-7fc01e35fb9a.json
 export/
 backup/
 zz_archive/
