git commit -m "Improve API verification script with better error handling and resiliency. Remove dependency on requests module in favor of standard library for better compatibility."

--- a/.env.template
+++ b/.env.template
@@ -1,6 +1,21 @@
 # Kraken API Credentials
-# Replace with your actual Kraken API key and secret
-# Then rename this file to .env
+# ---------------------
+# The API key and secret are used to authenticate with the Kraken exchange API.
+# These credentials allow the application to fetch your trading history and ledger entries.
+# You can obtain these from your Kraken account under Security > API Keys.
+KRAKEN_API_KEY="your_kraken_api_key_here"
+KRAKEN_API_SECRET="your_kraken_api_secret_here"
 
-KRAKEN_API_KEY=your_api_key_here
-KRAKEN_API_SECRET=your_api_secret_here
+# Google Sheets Export Configuration
+# ---------------------------------
+# These settings enable the application to export tax reports directly to Google Sheets.
+# 
+# GOOGLE_SHEET_ID: The unique identifier for your Google Sheet, extracted from the sheet's URL.
+# Format: https://docs.google.com/spreadsheets/d/[THIS-IS-YOUR-SHEET-ID]/edit
+GOOGLE_SHEET_ID="your_google_sheet_id_here"
+
+# GOOGLE_CREDENTIALS_FILE: Path to the Google Service Account credentials JSON file
+# This file contains authentication information that allows the application 
+# to access your Google Sheets without manual login.
+# The file should be located in the root directory of the project.
+GOOGLE_CREDENTIALS_FILE="your_credentials_filename.json"
